Linked css and html file, and adjusted the menu

--- a/Landing_page.html
+++ b/Landing_page.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="landing-page.css">
   <title>Music Production</title>
 </head>
 <body style= "background-image:url(wes-hicks-MEL-jJnm7RQ-unsplash.jpg); object-fit: cover; background-attachment: fixed; background-size: cover;">
-  <button><img src="icons8-hamburger-menu-91.png"></button>
+  <button class="menu"><img src="icons8-hamburger-menu-91.png"></button>
 
   <p><strong><u>Make Music</u></strong></p>
   <br/>
