--- a/Landing_page.html
+++ b/Landing_page.html
@@ -10,14 +10,16 @@
 <body style= "background-image:url(wes-hicks-MEL-jJnm7RQ-unsplash.jpg); object-fit: cover; background-attachment: fixed; background-size: cover;">
   <button class="menu"><img src="icons8-hamburger-menu-91.png"></button>
 
-  <p><strong><u>Make Music</u></strong></p>
+  <p class="title"><strong>Make Music</strong></p>
   <br/>
-  <p><strong>Learn the Fundamentals of Music Production from the Best</stron></p>
+  <p class="header"><strong>Learn the Fundamentals of Music Production from the Best</stron></p>
   <br/>
 
-  <P>Music is the soundtrack of your life. Bring the rhythm of your soul to life and share it with everone</P>
+  <P class="hook">Music is the soundtrack of your life. Bring the rhythm of your soul to life and share it with everone</P>
   <br/>
-  <button>Sign Up</button>
+  <div class="sign-up">
+    <button>Sign Up</button>
+  </div>
 
 </body>
 </html>
