created sign up form

--- a/Landing_page.html
+++ b/Landing_page.html
@@ -19,6 +19,21 @@
   <br/>
   <div class="sign-up">
     <button>Sign Up</button>
+
+    <div class="form">
+      <form class="main" action="" method="">
+        <input class="a" type="text" placeholder="Enter Full Name">
+        <br/>
+        <br/>
+        <input class="b" type="email" placeholder="Email">
+        <br/>
+        <br />
+        <input class="c" type="password" placeholder="Password">
+        <br/>
+        <br />
+        <input class="d" type="submit">
+      </form>
+    </div>
   </div>
 
 </body>
